src/test/ui/resolve/resolve-assoc-suggestions.stderr
error[E0412]: cannot find type `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:26:16
   |
26 |         let _: field;
   |                ^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:29:13
   |
29 |         let field(..);
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:32:9
   |
32 |         field;
   |         ^^^^^ did you mean `self.field`?

error[E0412]: cannot find type `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:36:16
   |
36 |         let _: Type;
   |                ^^^^ did you mean `Self::Type`?

error[E0531]: cannot find tuple struct/variant `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:39:13
   |
39 |         let Type(..);
   |             ^^^^ not found in this scope

error[E0425]: cannot find value `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:42:9
   |
42 |         Type;
   |         ^^^^ not found in this scope

error[E0412]: cannot find type `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:46:16
   |
46 |         let _: method;
   |                ^^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:49:13
   |
49 |         let method(..);
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:52:9
   |
52 |         method;
   |         ^^^^^^ did you mean `self.method(...)`?

error: aborting due to 9 previous errors

